--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="calculator-container">
     <div id="calculator">
       <div id="display">
-        <input readonly type="text" id="display-input">
+        <input onblur="this.focus()" type="text" id="display-input">
         <div id="display-output"></div>
       </div>
       <div id="toolbar">
