--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div id="calculator-container">
     <div id="calculator">
       <div id="display">
-        <input onblur="this.focus()" type="text" id="display-input">
-        <div id="display-output"></div>
+        <input onblur="this.focus()" autofocus type="text" id="display-input">
+        <div id="display-output"><p></p></div>
       </div>
       <div id="toolbar">
         <div id="storage-panel">
