Add event listeners for button and key presses

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
         <button class="input-button">9</button>
         <button class="input-button">0</button>
         <button class="input-button">.</button>
-        <button class="input-button">_</button>
+        <button class="input-button"> </button>
       </div>
       <div id="right-buttons">
         <button class="input-button">(</button>
         <button class="input-button">)</button>
-        <button class="input-button-operator">+</button>
-        <button class="input-button-operator">-</button>
-        <button class="input-button-operator">/</button>
-        <button class="input-button-operator">*</button>
+        <button class="input-button">+</button>
+        <button class="input-button">-</button>
+        <button class="input-button">/</button>
+        <button class="input-button">*</button>
         <button class="input-button">ANS</button>
         <button id="evaluate-button">=</button>
       </div>
