Add ability to save and use variables

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       </div>
       <div id="toolbar">
         <div id="storage-panel">
-          <button id="store-variable-button" class="small-button">STO</button>
-          <button id="variable-x-button" class="small-button">x</button>
-          <button id="variable-y-button" class="small-button">y</button>
-          <button id="variable-z-button" class="small-button">z</button>
+          <button id="store-variable-button" class="small-button storage-disabled">STO</button>
+          <button class="variable-button small-button" data-value="X">X</button>
+          <button class="variable-button small-button" data-value="Y">Y</button>
+          <button class="variable-button small-button" data-value="Z">Z</button>
         </div>
         <div id="navigation-buttons">
           <button id="go-left-button">←</button>
