--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
         </div>
       </div>
       <div id="left-buttons">
-        <button class="input-button">1</button>
-        <button class="input-button">2</button>
-        <button class="input-button">3</button>
-        <button class="input-button">4</button>
-        <button class="input-button">5</button>
-        <button class="input-button">6</button>
-        <button class="input-button">7</button>
-        <button class="input-button">8</button>
-        <button class="input-button">9</button>
-        <button class="input-button">0</button>
-        <button class="input-button">.</button>
-        <button class="input-button"> </button>
+        <button class="input-button" data-value="1">1</button>
+        <button class="input-button" data-value="2">2</button>
+        <button class="input-button" data-value="3">3</button>
+        <button class="input-button" data-value="4">4</button>
+        <button class="input-button" data-value="5">5</button>
+        <button class="input-button" data-value="6">6</button>
+        <button class="input-button" data-value="7">7</button>
+        <button class="input-button" data-value="8">8</button>
+        <button class="input-button" data-value="9">9</button>
+        <button class="input-button" data-value="0">0</button>
+        <button class="input-button" data-value=".">.</button>
+        <button class="input-button" data-value=" ">_</button>
       </div>
       <div id="right-buttons">
-        <button class="input-button">(</button>
-        <button class="input-button">)</button>
-        <button class="input-button">+</button>
-        <button class="input-button">-</button>
-        <button class="input-button">/</button>
-        <button class="input-button">*</button>
-        <button class="input-button">ANS</button>
+        <button class="input-button" data-value="(">(</button>
+        <button class="input-button" data-value=")">)</button>
+        <button class="input-button" data-value="+">+</button>
+        <button class="input-button" data-value="-">-</button>
+        <button class="input-button" data-value="/">/</button>
+        <button class="input-button" data-value="*">*</button>
+        <button class="input-button" data-value="a">ANS</button>
         <button id="evaluate-button">=</button>
       </div>
     </div>
