Make calculator save previous result, and give ability to use it

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <button class="input-button" data-value="-">-</button>
         <button class="input-button" data-value="/">/</button>
         <button class="input-button" data-value="*">*</button>
-        <button class="input-button" data-value="a">ANS</button>
+        <button class="input-button" data-value="ANS">ANS</button>
         <button id="evaluate-button">=</button>
       </div>
     </div>
