Improve presentation of fractional results

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input onblur="this.focus()" autofocus type="text" id="display-input">
         <div id="display-output"><p></p></div>
       </div>
+      <button id="change-output-format-button">F</button>
       <div id="toolbar">
         <div id="storage-panel">
           <button id="store-variable-button" class="small-button storage-disabled">STO</button>
