Disable spellcheck in input box, prevent input from being > 27 chars long

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="calculator-container">
     <div id="calculator">
       <div id="display">
-        <input onblur="this.focus()" autofocus type="text" id="display-input">
+        <input onblur="this.focus()" autofocus type="text" id="display-input" spellcheck="false">
         <div id="display-output"><p></p></div>
       </div>
       <button id="change-output-format-button" class="change-format-disabled">F</button>
